--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,5 @@
     <string name="chooscommprint">Choose the order for which you want to print an invoice</string>
     <string name="home">Home</string>
     <string name="setttingsTaxes">To add a tax, use only numbers and/or a dot in the settings.</string>
-
+    <string name="resetSales">Reset number of sales</string>
 </resources>
